# rust_lang_lang

crates/eldiro/: Cargo.toml
crates/eldiro-cli/: Cargo.toml
crates/eldiro-cli/src/: main.rs
crates/eldiro/src/: binding_def.rs  env.rs  expr.rs  func_def.rs  lexer.rs  lib.rs  parser.rs  stmt.rs  syntax.rs  utils.rs
crates/eldiro/src/expr/: binding_usage.rs  block.rs  func_call.rs
crates/eldiro/src/parser/: expr.rs
src/: binding_def.rs  env.rs  expr.rs  lib.rs  stmt.rs  utils.rs
src/expr/: binding_usage.rs  block.rs
