[package]
name = "eldiro"
version = "0.1.0"
authors = ["hj <ijshj10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
num-derive = "0.3.3"
num-traits = "0.2.14"
rowan = "0.10.0"

[dev-dependencies]
expect-test = "1.0.1"